--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -18,11 +18,11 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Setup Pages
+      - name: Setup GitHub Pages
         uses: actions/configure-pages@v4
 
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v2   
         with:
           path: .
 
